# Labalaba

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dev-be.ps1  dev-fe.ps1  settings.yaml  tasks.yaml
.claude/: settings.local.json
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
crates/daemon/: Cargo.toml
crates/daemon/src/: cleanup.rs  lib.rs  main.rs
crates/daemon/src/application/: dto.rs  mod.rs
crates/daemon/src/application/log/: get_logs.rs  mod.rs  stream_logs.rs
crates/daemon/src/application/task/: create_task.rs  delete_task.rs  edit_task.rs  mod.rs  restart_task.rs  start_task.rs  stop_task.rs
crates/daemon/src/application/update/: check_update.rs
crates/daemon/src/domain/: mod.rs
crates/daemon/src/domain/log/: entity.rs
crates/daemon/src/domain/process/: entity.rs  service.rs
crates/daemon/src/domain/scheduler/: mod.rs  schedule.rs  service.rs
crates/daemon/src/domain/task/: entity.rs  repository.rs  status.rs
crates/daemon/src/infrastructure/: autostart.rs  mod.rs  net.rs  state.rs
crates/daemon/src/infrastructure/auth/: token.rs
crates/daemon/src/infrastructure/log/: collector.rs  file_writer.rs  mod.rs
crates/daemon/src/infrastructure/persistence/: mod.rs  yaml_repository.rs
crates/daemon/src/infrastructure/process/: admin.rs  liveness.rs  mod.rs  resource_monitor.rs  spawner.rs
crates/daemon/src/infrastructure/scheduler/: cron_scheduler.rs  mod.rs
crates/daemon/src/infrastructure/system/: interpreter.rs
crates/daemon/src/infrastructure/updater/: github_updater.rs  mod.rs
crates/daemon/src/interface/http/: health_handler.rs  logs_handler.rs  mod.rs  router.rs  settings_handler.rs  system_handler.rs  task_handler.rs  update_handler.rs
crates/daemon/src/interface/ws/: log_handler.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  lib.rs  settings.rs  task.rs
docs/: README.md
docs/dev/: v1.2.0-daemon-architecture.md
docs/en/: README.md  admin-elevation.md  auto-restart.md  background-service.md  configuration-files.md  creating-tasks.md  dependencies.md  faq.md  getting-started.md  installation.md  logs.md  managing-tasks.md  notifications-and-updates.md  scheduling.md  settings.md  troubleshooting.md
docs/id/: README.md  admin-elevation.md  auto-restart.md  background-service.md  configuration-files.md  creating-tasks.md  dependencies.md  faq.md  getting-started.md  installation.md  logs.md  managing-tasks.md  notifications-and-updates.md  scheduling.md  settings.md  troubleshooting.md
docs/plans/: .gitignore  2026-03-01-labalaba-design.md  2026-03-02-launcher-design.md
gui/: package-lock.json  package.json
gui/src/: app.html
gui/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/deb/: prerm.sh
gui/src-tauri/src/: lib.rs
gui/src-tauri/src/commands/: daemon.rs  logs.rs  mod.rs  portable.rs  service.rs  settings.rs  system.rs  tasks.rs
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/styles/: glassmorphism.css  theme.css
scripts/: dev-fe.ps1  stop.ps1  tree.sh
(+17 files in other folders)
