[package]
name = "labalaba-daemon"
version = "1.0.2"
edition = "2021"

[lib]
name = "labalaba_daemon"
path = "src/lib.rs"

[[bin]]
name = "labalaba-daemon"
path = "src/main.rs"

[dependencies]
labalaba-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"
cron = "0.12"
sysinfo = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
